@@ -3,6 +3,7 @@ V.Next
 - [MINOR] Update logic for matching requested claims for AT (#2401)
 - [MINOR] Updating YubiKit and CredMan versions (#2417)
 - [PATCH] Adding check for OS version for passkeys (#2419)
+- [MINOR] Platform Specific Extra Query Parameters (#2426)
 
 Version 17.4.0
 ---------
